--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #25303b;
 }
 
 .wrapper {
@@ -23,21 +23,23 @@ body {
   padding-right: 20px;
 }
 
-header {
+header h1 {
   text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  padding: 10px;
+  color: #97a2ad;
+  background-color: hsl(209, 22%, 23%);
+  margin: 0 30%;
+  border-radius: 10px;
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: rgb(96, 108, 124);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  box-shadow: rgba(49, 124, 185, 0.1) 0px 5px 20px 5px;
+  color: hsl(240, 3%, 12%);
   font-size: 18px;
-  margin: 0 auto;
+  margin: 25px auto;
   max-width: 800px;
   padding: 30px 40px;
 }
@@ -46,7 +48,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #1a1a1a;
   height: 2px;
 }
 
@@ -62,7 +64,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #1a1a1a;
   height: 2px;
 }
 
@@ -74,11 +76,10 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: hsl(200, 100%, 20%);
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: hsl(0, 0%, 100%);
+  box-shadow: rgba(12, 124, 228, 0.3) 0px 1px 30px 5px;
+  color: #cacaca;
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
@@ -112,10 +113,11 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px solid #bfc5cc;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+  box-shadow: rgba(205, 220, 231, 0.7) 0px 0px 25px 1px;
 }
 
 @media (max-width: 690px) {
@@ -124,7 +126,7 @@ button[disabled] {
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
   }
-
+  
   #password {
     font-size: 1rem;
   }
@@ -133,5 +135,11 @@ button[disabled] {
 @media (max-width: 500px) {
   .btn {
     font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 1460px){
+  header h1 {
+    margin: 0 36%;
   }
 }
